feat(bios_mb): add granular label colors and apply restricted palette theme

--- a/project_binary_fetch/binary_fetch_v1/Default_BinaryFetch_Config.json
+++ b/project_binary_fetch/binary_fetch_v1/Default_BinaryFetch_Config.json
@@ -604,16 +604,20 @@
     "show_mb_model": true,
     "show_mb_manufacturer": true,
     "#-": "bright_blue",
-    "~": "blue",
-    ":": "magenta",
-    "separator_line": "bright_blue",
-    "header_text_color": "bright_yellow",
-    "label_color": "cyan",
-    "vendor_value_color": "bright_green",
+    "~": "cyan",
+    ":": "red",
+    "separator_line": "red",
+    "header_text_color": "bright_cyan",
+    "vendor_label_color": "blue",
+    "vendor_value_color": "cyan",
+    "version_label_color": "blue",
     "version_value_color": "bright_cyan",
-    "date_value_color": "yellow",
-    "model_value_color": "bright_magenta",
-    "mfg_value_color": "green"
+    "date_label_color": "blue",
+    "date_value_color": "bright_red",
+    "model_label_color": "blue",
+    "model_value_color": "bright_blue",
+    "mfg_label_color": "blue",
+    "mfg_value_color": "cyan"
   },
   "user_info": {
     "enabled": true,
