feat(user): add granular label colors and apply restricted palette theme

--- a/project_binary_fetch/binary_fetch_v1/Default_BinaryFetch_Config.json
+++ b/project_binary_fetch/binary_fetch_v1/Default_BinaryFetch_Config.json
@@ -625,14 +625,16 @@
     "show_username": true,
     "show_computer_name": true,
     "show_domain": true,
-    "#-": "bright_magenta",
-    "~": "magenta",
-    ":": "blue",
-    "separator_line": "bright_magenta",
-    "header_text_color": "bright_yellow",
-    "label_color": "cyan",
-    "username_value_color": "bright_green",
-    "computer_name_value_color": "bright_cyan",
+    "#-": "bright_blue",
+    "~": "cyan",
+    ":": "red",
+    "separator_line": "red",
+    "header_text_color": "bright_cyan",
+    "username_label_color": "blue",
+    "username_value_color": "cyan",
+    "computer_name_label_color": "blue",
+    "computer_name_value_color": "red",
+    "domain_label_color": "blue",
     "domain_value_color": "bright_blue"
   },
   "performance_info": {
