fix(config): align JSON config loading with ASCII art AppData architecture
This commit fixes a long-standing inconsistency in BinaryFetch’s
configuration system where JSON configs were created correctly in
AppData but not always loaded from there at runtime.

Previously, the engine could still load Default_BinaryFetch_Config.json
directly due to DX/testing logic and runtime switches. This violated the
intended architecture and caused user-edited configs in AppData to be
ignored, even though the file existed and was valid.

The config system is now fully aligned with the ASCII art loader design:

- Default_BinaryFetch_Config.json is used strictly as a one-time template
- User config is always loaded from:
  C:\Users\Default\AppData\Local\BinaryFetch\BinaryFetch_Config.json
- Runtime switching between default and user configs has been removed
- Release behavior is deterministic and user-driven
- DX/testing logic no longer leaks into runtime config loading

This restores a single source of truth for configuration and ensures
that all user edits are respected after first-run initialization.

No functional behavior was changed for ASCII art loading — this commit
brings JSON config handling up to the same architectural standard.

--- a/project_binary_fetch/binary_fetch_v1/Default_BinaryFetch_Config.json
+++ b/project_binary_fetch/binary_fetch_v1/Default_BinaryFetch_Config.json
@@ -304,7 +304,7 @@
     "sections": {
       "storage_summary": true,
       "disk_performance": true,
-      "disk_performance_predicted": true
+      "disk_performance_predicted": false
     },
     "storage_summary": {
       "header": {
