--- a/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj
+++ b/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj
@@ -51,7 +51,7 @@
   <ItemGroup>
     <Text Include="Art_Collections.txt" />
     <Text Include="DefaultAsciiArt.txt" />
-    <Text Include="text infos\developement_note.txt" />
+    <Text Include="text infos\Commit_Info.txt" />
     <Text Include="text infos\main 8.txt" />
     <Text Include="text infos\main-6 copy.txt" />
     <Text Include="text infos\main-7 copy.txt" />
