--- a/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj.filters
+++ b/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj.filters
@@ -121,7 +121,7 @@
     <Text Include="Art_Collections.txt">
       <Filter>Resources</Filter>
     </Text>
-    <Text Include="text infos\developement_note.txt" />
+    <Text Include="text infos\Commit_Info.txt" />
     <Text Include="text infos\main.cpp with out josn.txt" />
   </ItemGroup>
   <ItemGroup>
