--- a/project_binary_fetch/binary_fetch_v1/resources.rc
+++ b/project_binary_fetch/binary_fetch_v1/resources.rc
@@ -1,4 +1,4 @@
-#include "resource.h"
+#include "include\resource.h"
 
 IDR_DEFAULT_CONFIG    RCDATA    "Default_BinaryFetch_Config.json"
 IDR_DEFAULT_ASCII     RCDATA    "DefaultAsciiArt.txt"
