refactor: move standalone file management.md to text info folder

--- a/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj
+++ b/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj
@@ -101,7 +101,7 @@
     <None Include="AsciiArt_Documentation.md" />
     <None Include="Documentation\BinaryFetch documentation.md" />
     <None Include="Default_BinaryFetch_Config.json" />
-    <None Include="Standalone Json File management.md" />
+    <None Include="text infos\Standalone Json File management.md" />
     <None Include="text infos\locations.md" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
