--- a/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj.filters
+++ b/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj.filters
@@ -227,7 +227,7 @@
     <None Include="AsciiArt_Documentation.md">
       <Filter>Resources</Filter>
     </None>
-    <None Include="Standalone Json File management.md">
+    <None Include="text infos\Standalone Json File management.md">
       <Filter>Resources</Filter>
     </None>
   </ItemGroup>
