refactor: move ascii art docs to textinfo folder

--- a/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj.filters
+++ b/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj.filters
@@ -224,7 +224,7 @@
     <None Include="Default_BinaryFetch_Config.json">
       <Filter>Config</Filter>
     </None>
-    <None Include="AsciiArt_Documentation.md">
+    <None Include="text infos\AsciiArt_Documentation.md">
       <Filter>Resources</Filter>
     </None>
     <None Include="text infos\Standalone Json File management.md">
