--- a/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj
+++ b/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj
@@ -98,7 +98,7 @@
     <ClCompile Include="UserInfo.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="AsciiArt_Documentation.md" />
+    <None Include="text infos\AsciiArt_Documentation.md" />
     <None Include="Documentation\BinaryFetch documentation.md" />
     <None Include="Default_BinaryFetch_Config.json" />
     <None Include="text infos\Standalone Json File management.md" />
