refactor: move default_config.json to resources\Default_BinaryFetch_Config.json

--- a/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj
+++ b/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj
@@ -100,7 +100,7 @@
   <ItemGroup>
     <None Include="text infos\AsciiArt_Documentation.md" />
     <None Include="Documentation\BinaryFetch documentation.md" />
-    <None Include="Default_BinaryFetch_Config.json" />
+    <None Include="resources\Default_BinaryFetch_Config.json" />
     <None Include="text infos\Standalone Json File management.md" />
     <None Include="text infos\locations.md" />
   </ItemGroup>
