--- a/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj.filters
+++ b/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj.filters
@@ -221,7 +221,7 @@
   <ItemGroup>
     <None Include="text infos\locations.md" />
     <None Include="Documentation\BinaryFetch documentation.md" />
-    <None Include="Default_BinaryFetch_Config.json">
+    <None Include="resources\Default_BinaryFetch_Config.json">
       <Filter>Config</Filter>
     </None>
     <None Include="text infos\AsciiArt_Documentation.md">
