docs(setup): add detailed NVAPI extraction and placement guidelines to prevent build issues

--- a/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj.filters
+++ b/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj.filters
@@ -230,5 +230,6 @@
     <None Include="text infos\Standalone Json File management.md">
       <Filter>Resources</Filter>
     </None>
+    <None Include="Environment Setup\Readme.md" />
   </ItemGroup>
 </Project>
